--- a/garment/web/src/app/common/common.component.html
+++ b/garment/web/src/app/common/common.component.html
@@ -86,23 +86,23 @@
               <a *ngIf="viewFlag.viewSupplierList" href="javascript:void(0)" [routerLink]="['/inventory/supplier']" id="collapseExample2">Supplier</a>
               <a *ngIf="viewFlag.viewPurchaseList" href="javascript:void(0)" (click)="refresh('purchaseList')" [routerLink]="['/inventory/purchaseList',0]" id="collapseExample2">Purchase</a>
               <a *ngIf="viewFlag.viewPurchaseReturnList" href="javascript:void(0)" [routerLink]="['/inventory/purchase-returnList']" id="collapseExample2">Purchase Return</a>
-              <a *ngIf="viewFlag.viewProductTransfer && companyData.ProductTransfer == 'true'" href="javascript:void(0)" [routerLink]="['/inventory/product-transfer']" id="collapseExample2">Product Transfer</a> 
+              <!-- <a *ngIf="viewFlag.viewProductTransfer && companyData.ProductTransfer == 'true'" href="javascript:void(0)" [routerLink]="['/inventory/product-transfer']" id="collapseExample2">Product Transfer</a>  -->
               <!-- <a *ngIf="viewFlag.viewProductTransfer" href="javascript:void(0)" [routerLink]="['/inventory/transfer-product',0]" id="collapseExample2">Bulk Transfer</a> -->
               <a *ngIf="viewFlag.viewBulkTransferList && companyData.BulkTransfer == 'true'" href="javascript:void(0)" [routerLink]="['/inventory/transfer-list']" id="collapseExample2">Bulk Transfer </a>
               
-              <div *ngIf="companysetting.OrderPriceList == 'true'" >
+              <!-- <div *ngIf="companysetting.OrderPriceList == 'true'" >
                 <a *ngIf="viewFlag.viewOrderPriceList " href="javascript:void(0)" [routerLink]="['/inventory/preOrderList']" id="collapseExample2">Order (PriceList)</a>
-              </div>
+              </div> -->
 
-              <div *ngIf="companysetting.SearchOrderPriceList == 'true'">
+              <!-- <div *ngIf="companysetting.SearchOrderPriceList == 'true'">
                 <a *ngIf="viewFlag.viewSearchOrderPriceList" href="javascript:void(0)" [routerLink]="['/inventory/dummyPreorderList']" id="collapseExample2">Search Order (PriceList)</a>
-               </div>
+               </div> -->
               <a *ngIf="viewFlag.viewStockAdjustment" href="javascript:void(0)" [routerLink]="['/inventory/search-barcode']" id="collapseExample2">Stock Adjustment</a>
               <a *ngIf="viewFlag.viewBrandNonBrandAssign" href="javascript:void(0)" [routerLink]="['/inventory/inventory-summary']" id="collapseExample2">Brand/NonBrand (Assign)</a>
               
-              <div *ngIf="companysetting.LensGridView == 'true'">
+              <!-- <div *ngIf="companysetting.LensGridView == 'true'">
                 <a *ngIf="viewFlag.viewLensGridList" href="javascript:void(0)" [routerLink]="['/inventory/lens-grid-List',0]" id="collapseExample2">Lens Grid View</a>
-              </div>
+              </div> -->
             </div>
           </div>
           <!-- companyadmin end Purchseing -->
@@ -116,7 +116,7 @@
               <a *ngIf="viewFlag.viewCustomerSearch" href="javascript:void(0)" [routerLink]="['/sale/customerList']" id="collapseExample3">Customer Search</a>
               <a *ngIf="user?.CompanyID  == 241 || user?.CompanyID == 300" href="javascript:void(0)" [routerLink]="['/inventory/order-form']" id="collapseExample2">Order Request</a>
               <div *ngIf="companysetting.Doctor == 'true'">
-                <a *ngIf="viewFlag.viewDoctorList" href="javascript:void(0)" [routerLink]="['/sale/doctorList']" id="collapseExample3">Doctor</a>
+                <a *ngIf="viewFlag.viewDoctorList" href="javascript:void(0)" [routerLink]="['/sale/doctorList']" id="collapseExample3">Reference</a>
               </div>
               <a *ngIf="viewFlag.viewLoyalty && companyData.EmployeeCommission == 'true'" href="javascript:void(0)" [routerLink]="['/sale/commission']" id="collapseExample3">Loyalty</a>
               <a *ngIf="viewFlag.viewLoyaltyInvoice && companyData.EmployeeCommission == 'true'" href="javascript:void(0)" (click)="refresh('commissionList')" [routerLink]="['/sale/commissionList',0]" id="collapseExample3">Loyalty  Invoice</a>
@@ -126,22 +126,23 @@
           </div>
           <!-- companyadmin end Bliing -->
           <!-- companyadmin  Lens Order -->
+
           <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('E')">
-            <a *ngIf="companysetting.LensOrderModule == 'true' " class="dropBtn" data-target="#collapseExample4">Lens Order <i class="fa fa-caret-down"
-                aria-hidden="true"></i></a>
+            <!-- <a *ngIf="companysetting.LensOrderModule == 'true' " class="dropBtn" data-target="#collapseExample4">Lens Order <i class="fa fa-caret-down"
+                aria-hidden="true"></i></a> -->
             <div class="drop-content" id="collapseExample4">
-              <!-- <a href="javascript:void(0)" [routerLink]="['/sale/billing',0,0]" id="collapseExample">Billing</a> -->
               <a *ngIf="viewFlag.viewSupplierOrder" href="javascript:void(0)" [routerLink]="['/po/supplierPo']" id="collapseExample4">Supplier Order</a>
               <a *ngIf="viewFlag.viewPurchaseConvert" href="javascript:void(0)" [routerLink]="['/po/convertToPurchase']" id="collapseExample4">Convert To Purchase</a>
               <a *ngIf="viewFlag.viewSupplierOrderList" href="javascript:void(0)" [routerLink]="['/po/supplierPoList']" id="collapseExample4">Supplier OrderList</a>
-           
             </div>
           </div>
+          
           <!-- companyadmin end Lens Order -->
           <!-- companyadmin  Lens Order -->
+
           <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('F')">
-            <a *ngIf="companysetting.FitterOrderModule == 'true'" class="dropBtn" data-target="#collapseExample5">Fitter Order <i class="fa fa-caret-down"
-                aria-hidden="true"></i></a>
+            <!-- <a *ngIf="companysetting.FitterOrderModule == 'true'" class="dropBtn" data-target="#collapseExample5">Fitter Order <i class="fa fa-caret-down"
+                aria-hidden="true"></i></a> -->
             <div class="drop-content" id="collapseExample5">
               <a *ngIf="viewFlag.viewFitterList" href="javascript:void(0)" [routerLink]="['/inventory/fitterList']" id="collapseExample5">Fitter</a>
               <a *ngIf="viewFlag.viewFitterOrder" href="javascript:void(0)" [routerLink]="['/po/fitterPo']" id="collapseExample5">Fitter Order</a>
@@ -149,6 +150,7 @@
               <a *ngIf="viewFlag.viewFitterInvoiceList" href="javascript:void(0)" (click)="refresh('fitterInvoiceList')" [routerLink]="['/po/fitterInvoiceList',0]" id="collapseExample5">Fitter Invoice List</a>
             </div>
           </div>
+
           <!-- companyadmin end Lens Order -->
           <!-- companyadmin  company payment start -->
           <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('G')">
@@ -193,9 +195,9 @@
               <div *ngIf="user?.UserGroup == 'CompanyAdmin'">
                 <a *ngIf="viewFlag.viewSupplierCreditReport " href="javascript:void(0)" [routerLink]="['/report/supplierCredit']" id="collapseExample7">Supplier Credit</a>
               </div>
-              <div *ngIf="companysetting.EyeTestReport == 'true'">
+              <!-- <div *ngIf="companysetting.EyeTestReport == 'true'">
                 <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" [routerLink]="['/report/eyetest']"  id="collapseExample7">Eye Test</a>
-              </div>
+              </div> -->
               <a *ngIf="viewFlag.viewLoyaltyReport && companyData.EmployeeCommission == 'true'" href="javascript:void(0)" [routerLink]="['/report/loyality']"  id="collapseExample7">Loyalty </a>
               <a *ngIf="viewFlag.viewOldSaleReport" href="javascript:void(0)" [routerLink]="['/report/oldSale']" id="collapseExample7">Old Sale </a> 
               <a *ngIf="viewFlag.viewGSTFilingReport" href="javascript:void(0)" [routerLink]="['/report/GST-filling']" id="collapseExample7">GST Filling</a> 
