--- a/garment/web/src/app/common/login.component.html
+++ b/garment/web/src/app/common/login.component.html
@@ -1,9 +1,9 @@
-<div class="container-fluid bb p-5 ">
+<div class="container-fluid bb  ">
   <div class="img-bgm"></div>
   <!-- <audio controls autoplay style="display: none;">
     <source src="../../assets/images/ram.mp3" type="audio/ogg" auto>
   </audio> -->
-  <div class="row">
+  <div class="row p-5">
     <div class="container ">
       <div class="row mt-5 mt-sm-0">
         <div class="col-xxl-4  col-xl-4 col-lg-6 col-md-8 col-12 mt-5 mx-auto">
@@ -11,19 +11,9 @@
             <form #f="ngForm" (ngSubmit)="onSubmit(content)" class="box mx-auto" autocomplete="off">
               <div class="row">
                 <div class="col-md-5 col-sm-4 col-7 mx-auto text-center">
-                  <h1 class="log_name">Login</h1>
+                  <h1 class="log_name">Log<b style="color:#ffffff00">i</b>n</h1>
                   <div class="cat ">
-                    <div class="ear ear--left"></div>
-                    <div class="ear ear--right"></div>
-                    <div class="face">
-                      <div class="eye eye--left">
-                        <div class="eye-pupil"></div>
-                      </div>
-                      <div class="eye eye--right">
-                        <div class="eye-pupil"></div>
-                      </div>
-                      <div class="muzzle"></div>
-                    </div>
+                 <svg fill="#ff5100" height="35px" width="53px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 218.711 218.711" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M174.921,31.465C174.921,10.808,141.937,0,109.356,0C76.774,0,43.79,10.808,43.79,31.465 c0,15.306,18.113,25.198,40.749,29.299l8.38,12.698L80.661,186.908c-0.229,2.126,0.459,4.248,1.893,5.835l21.238,23.497 c1.422,1.573,3.443,2.471,5.564,2.471s4.142-0.897,5.564-2.471l21.238-23.497c1.434-1.587,2.122-3.709,1.893-5.835L125.793,73.461 l8.38-12.697C156.808,56.663,174.921,46.771,174.921,31.465z M126.019,37.668c-1.381-2.116-3.732-3.409-6.271-3.409H98.963 c-2.539,0-4.89,1.292-6.271,3.408c-11.518-1.426-19.087-4.13-22.123-6.203c4.318-2.949,17.773-7.186,38.787-7.186 s34.469,4.236,38.787,7.186C145.107,33.538,137.538,36.242,126.019,37.668z"></path> </g></svg>
                   </div>
                 </div>
               </div>
