--- a/garment/web/src/app/report/ledge-report/ledge-report.component.html
+++ b/garment/web/src/app/report/ledge-report/ledge-report.component.html
@@ -125,7 +125,8 @@
 
 
                     <!-- fitter card  -->
-                    <div *ngIf="companySetting.FitterLedgerReport == 'true' && viewFitterLedgerReport" class="card p-0">
+                     
+                    <!-- <div *ngIf="companySetting.FitterLedgerReport == 'true' && viewFitterLedgerReport" class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-md-2 col-8 p-0 ms-3">
@@ -168,7 +169,7 @@
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
-                                    <!--  spec end -->
+                                   
                                     <div class="col-xl-2 col-lg-4 col-md-6 col-6 mb-0 ">
                                         <button class="me-3" type="submit" mat-raised-button color="primary"
                                             [disabled]="!f3.valid">
@@ -182,7 +183,7 @@
                                 </div>
                             </form>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- employee card  -->
                     <div *ngIf="viewEmployeeLedgerReport && companyData.EmployeeCommission == 'true'" class="card p-0">
@@ -245,7 +246,7 @@
                     </div>
 
                     <!-- doctor card  -->
-                    <div *ngIf="companySetting.DoctorLedgerReport == 'true' && viewDoctorLedgerReport && companyData.EmployeeCommission == 'true'" class="card p-0">
+                    <!-- <div *ngIf="companySetting.DoctorLedgerReport == 'true' && viewDoctorLedgerReport && companyData.EmployeeCommission == 'true'" class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-md-2 col-8 p-0 ms-3">
@@ -288,7 +289,7 @@
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
-                                    <!--  spec end -->
+                                 
                                     <div class="col-xl-2 col-lg-4 col-md-6 col-6 mb-0 ">
                                         <button class="me-3" type="submit" mat-raised-button color="primary"
                                             [disabled]="!f5.valid">
@@ -302,7 +303,7 @@
                                 </div>
                             </form>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
