--- a/garment/web/src/app/report/customer-report/customer-report.component.html
+++ b/garment/web/src/app/report/customer-report/customer-report.component.html
@@ -15,7 +15,7 @@
             <mat-tab-group>
               <!-- customer  -->
               <!-- customer with power -->
-              <mat-tab label="Customer With Power Report">
+              <mat-tab label="Customer Report">
                 <div class="body">
                   <form class="p-3 pb-0" #f1="ngForm">
                     <div class="row">
@@ -24,9 +24,9 @@
                           <mat-label>Select Types</mat-label>
                           <mat-select name="Type" [(ngModel)]="Type">
                             <mat-option value="Customer">Customer</mat-option>
-                            <mat-option value="spectacle_rx">Spectacle_Rx</mat-option>
+                            <!-- <mat-option value="spectacle_rx">Spectacle_Rx</mat-option>
                             <mat-option value="contact_lens_rx">Contact_Lens_Rx</mat-option>
-                            <mat-option value="other_rx">Other_Rx</mat-option>
+                            <mat-option value="other_rx">Other_Rx</mat-option> -->
                           </mat-select>
                         </mat-form-field>
                       </div>
@@ -54,12 +54,13 @@
                   </div>
                 </div>
               </mat-tab>
-              <mat-tab label="Customer Report">
+
+              <!-- <mat-tab label="Customer Report">
                 <div class="body">
                   <form class="p-3 pb-0" #f="ngForm">
 
                   </form>
-                  <!-- customer list -->
+               
                   <div class="body p-2">
                     <div id="customer-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                       <table class="table table-striped table-hover table-sm table-bordered"
@@ -139,7 +140,8 @@
                     </div>
                   </div>
                 </div>
-              </mat-tab>
+              </mat-tab> -->
+
               <mat-tab label="Member Card Report" *ngIf="companyData.PrimeMembership == 'true'">
                 <div class="body">
                   <form class="p-3 pb-0" #f="ngForm" (ngSubmit)="searchDataMember()">
