--- a/garment/web/src/app/sale/bill/bill.component.css
+++ b/garment/web/src/app/sale/bill/bill.component.css
@@ -264,25 +264,25 @@ button:disabled .deletes_icon {
 }
 
 .whatsappfBill {
-    font-size: 21px;
+    font-size: 18px;
     border: none;
     border-radius: 5px;
     background: #55c13e;
-    padding: 9px 10px;
+    padding: 0px 0px;
     color: #FFF;
     height: 38px;
     width: 100px;
-    box-shadow: 1px 1px 10px #0003;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.097);
 }
 
 button:disabled.whatsappBill {
-    background-color: #bdbdbd !important;
-    color: #878787 !important;
+background-color: #e0e0e0 !important;
+    color: #ababab !important;
 }
 
 button:disabled.whatsappfBill {
-    background-color: #bdbdbd !important;
-    color: #878787 !important;
+background-color: #e0e0e0 !important;
+    color: #ababab !important;
 }
 
 .EmailBill {
