--- a/garment/web/src/app/sale/bill/bill.component.html
+++ b/garment/web/src/app/sale/bill/bill.component.html
@@ -133,23 +133,23 @@
                         </div>
                     </mat-form-field>
                 </div>
-                <div *ngIf="company.ID != 241 && company.ID != 300 " class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                <!-- <div *ngIf="company.ID != 241 && company.ID != 300 " class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Preorder" color="primary" [(ngModel)]="BillItem.PreOrder"
                         class="example-margin" #Multiplecontrol style="color:#ff651e;"
                         [disabled]="BillItem.Manual === true">
                         Preorder</mat-slide-toggle>
-                </div>
-                <div *ngIf="company.ID != 241 && company.ID != 300 " class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                </div> -->
+                <div class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Manual" color="primary" [(ngModel)]="BillItem.Manual" class="example-margin"
                         #Manualcontrol style="color:#ff651e;"
                         [disabled]="BillItem.PreOrder === true">Manual</mat-slide-toggle>
                 </div>
-                <div *ngIf="company.ID == 241 || company.ID == 300 || company.ID == 1" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                <!-- <div *ngIf="company.ID == 241 || company.ID == 300 || company.ID == 1" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Order" color="primary" [(ngModel)]="BillItem.Order" class="example-margin"
                         #Ordercontrol style="color:#ff651e;" 
                         >Order</mat-slide-toggle>
-                </div>
-                <div *ngIf="this.loginShop.DiscountSetting == 'true' && company.ID != 241 && company.ID != 300" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                </div> -->
+                <div *ngIf="this.loginShop.DiscountSetting == 'true'" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="disocuntSettingBtn" color="primary" [(ngModel)]="discontSettingBtn" class="example-margin"
                         #Manualcontrol style="color:#ff651e;"
                         >Disocunt</mat-slide-toggle>
@@ -503,7 +503,7 @@
                     </mat-form-field>
                 </div>
 
-                <div *ngIf="BillItem.Order" class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0 col-1Modify">
+                <!-- <div *ngIf="BillItem.Order" class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0 col-1Modify">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Order Shop</mat-label>
                         <mat-select name="ShopID" [(ngModel)]="BillItem.OrderShop" required>
@@ -513,7 +513,7 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                </div>
+                </div> -->
 
                 <div *ngIf="addCustomerBill" class="col-xl-1 col-lg-1 col-md-2 col-3 mb-0 mb-3  ms-auto ">
                     <button *ngIf="BillItem.Manual === false &&  BillItem.PreOrder === false && BillItem.Order === false" type="submit"
@@ -1035,6 +1035,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-12 mobbtn" >
+                    
                     <button *ngIf="this.id2 == 0" type="button" class=" me-md-3 me-0" mat-raised-button color="primary"
                         (click)="onSubmit(content1)"
                         [disabled]="onSubmitFrom || (!billItemList.length && !serviceLists.length)">Sav<span class="first-letter">e</span></button>
@@ -1042,26 +1043,30 @@
                         [disabled]="BillMaster.ID === null && !f2.valid" (click)="update()"><span class="first-letter">U</span>pdate</button>
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal1(content1)">Payment</button>
+
                     <!-- <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal5(content5)">Reward</button> -->
-                    <button  type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
+                    <!-- <button  type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal12(content12)">Lens Order</button>
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
-                        [disabled]="BillMaster.ID === null" (click)="openModal13(content13)">Fitter Order</button>
+                        [disabled]="BillMaster.ID === null" (click)="openModal13(content13)">Fitter Order</button> -->
+                       
                         <button type="button" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null || this.fortyPercentDisabledB == true" (click)="billPrint('Invoice')" > <span class="first-letter">R</span>eceipt</button>
+
                         <!-- <button type="button" (click)="billPrints('Invoice')" class="small_big_Btn"> S</button>
                         <button type="button" (click)="billPrintB('Invoice')" class="small_big_Btn "> B</button> -->
 
                     <button type="button" class=" me-md-0 me-0 ms-md-3 ms-0"  mat-raised-button color="primary"
                     [disabled]="BillMaster.ID === null || this.fortyPercentDisabledB == true" (click)="billPrint('Receipt')"> <span class="first-letter">I</span>nvoice</button>
+
                         <!-- <button type="button" (click)="billPrints('Receipt')" class="small_big_Btn"> S</button>
                         <button type="button" (click)="billPrintB('Receipt')" class="small_big_Btn "> B</button> -->
 
-                    <button type="button" mat-raised-button color="primary" class="ms-md-3">
+                    <!-- <button type="button" mat-raised-button color="primary" class="ms-md-3">
                         <mat-slide-toggle name="ShowPower" color="primary" [(ngModel)]="ShowPower"
                             class="example-margin" #ShowPowercontrol>Show Power</mat-slide-toggle>
-                    </button>
+                    </button> -->
                     <!-- <button type="button"  mat-raised-button color="primary">Receipt +
                         Power</button>
 
@@ -1070,9 +1075,9 @@
                         <!-- [disabled]="this.BillLink == ''" -->
                    
 
-                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'"   [disabled]="this.fortyPercentDisabledB == true" (click)="sendWhatsapp('bill')" class="bgRemove whatsappBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i></button>
+                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'"   [disabled]="this.BillLink == '' || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('bill')" class="bgRemove whatsappBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i></button>
 
-                    <button type="button" *ngIf="this.company.EmailMsg == 'true'" [disabled]="BillMaster.ID === null" (click)="sendEmail('Bill')" class="bgRemove ms-0 me-0"><i class="fa-solid fa-envelope EmailBill"></i></button>
+                    <button type="button" *ngIf="this.company.EmailMsg == 'true'" [disabled]="BillMaster.ID === null" (click)="sendEmail('Bill')" class="bgRemove   ms-0 me-0"><i class="fa-solid fa-envelope EmailBill"></i></button>
 
                     <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="this.BillLink == '' || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('Fbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Final</button>
                     <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="!this.BillMaster.InvoiceNo || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('Textbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Text</button>
