--- a/garment/web/src/app/sale/billing/billing.component.html
+++ b/garment/web/src/app/sale/billing/billing.component.html
@@ -4,7 +4,7 @@
         <div class="row clearfix">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0 p-0">
 
-                <div class="card" *ngIf="this.companySetting.CustomerWithPower === 'true'">
+                <div class="card" *ngIf="this.companySetting.CustomerWithPower === 'false'">
                     <div *ngIf="this.CustomerPowerView === true">
                         <div class="header">
                             <div class="row">
@@ -2955,7 +2955,7 @@
                     </div>
                 </div>
 
-                <div class="card" *ngIf="this.companySetting.CustomerWithPower === 'false'">
+                <div class="card" *ngIf="this.companySetting.CustomerWithPower === 'true'">
                     <div class="header">
                         <div class="row">
                             <div class="col-lg-2 col-md-2 col-3">
@@ -2968,9 +2968,9 @@
                             </div>
                             <div class="col-xl-2 col-lg-2 col-md-2 col-9 mr-md-2 mr-0 ms-auto "
                                 style="display: inherit; height: 20px;margin-top: 1px;color: black;">
-                                <div class="ms-auto">
-                                    <label style="font-size: 14px; margin-right:10px">VisitDate </label>
-                                    <input style="border-bottom: 1px solid;width: 105px;" matInput name="VisitDate"
+                                <div class="ms-auto" style="border: 1px solid #313131; padding: 0px;">
+                                    <label style="font-size: 14px; margin-right:10px ;margin-left: 4px; color:#ff651e;font-weight: 600;">VisitDate </label>
+                                    <input style="border-bottom: 0px solid;width: 105px; line-height: 20px !important;" matInput name="VisitDate"
                                         type="date" [(ngModel)]="data.VisitDate">
 
                                 </div>
