--- a/garment/web/src/app/sale/doctor-list/doctor-list.component.html
+++ b/garment/web/src/app/sale/doctor-list/doctor-list.component.html
@@ -7,7 +7,7 @@
             <div class="header p-2 py-0 pt-1">
               <div class="row">
                 <div class="col-xl-1 col-lg-2 col-md-2 col-5 p-0 ms-md-3 ms-2">
-                  <h2>DoctorList<i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
+                  <h2>Reference<i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
                     (click)="exportAsXLSX()"></i></h2>
                 </div>
                 <div class="col-md-1 col-3 ps-md-0 ps-1 order-1 order-md-1">
