--- a/garment/web/src/app/admin/welcome.component.html
+++ b/garment/web/src/app/admin/welcome.component.html
@@ -1,7 +1,7 @@
-<div class="container-fuild " style="background-color: hsla(178, 94%, 72%, 0.961); height: 100vh;">
+<div class="container-fuild " style="background: linear-gradient(202deg, #0d3475d4, #fff, #fe61065c); height: 100vh;">
     <div class="row">
         <div class="container ">
-            <div class="row px-5 ">
+            <div class="row px-md-5 px-1 ">
                 <div class="row mt-0 py-4 ">
                     <div class="col-md-2 col-12">
                         <img src="assets/images/relinksyslogo.png" alt="" width="50%" class="logoani">
@@ -12,11 +12,11 @@
                     <div class="col-md-6 col-12 mx-auto text-center"
                         style="  z-index: 9999; ">
                         <!-- <i class="far fa-registered" style="position: absolute; padding-top: 49.5%; font-size: 16px;"></i> -->
-                        <img src="assets/images/opticalguru.png" alt=""  class="oplogo" style="padding-top: 0px;">
+                        <img src="assets/images/Garment-logo.png" alt=""  class="oplogo" style="padding-top: 0px;">
                     </div>
                 </div>
                 <div class="row mt-0">
-                    <div class="col-md-12 col-10  conBox mx-auto">
+                    <div class="col-md-12 col-12  conBox mx-auto">
                         <p class="headline">
                             Relinksys is a India-based leading software services provider company.
                         </p>
@@ -28,15 +28,14 @@
 
                         <button class="user" [routerLink]="['/login']">
                             Please Enter
-                            <i class="fa fa-arrow-right ps-3 pt-1 a-ten"
-                                style="font-size: 18px; color: rgb(255, 108, 4);" aria-hidden="true"></i>
+                           
                         </button>
                     </div>
                     
                 </div>
             </div>
             <div class="row bg-light " >
-                <div class="col-12 pe-5" style="position: absolute; bottom: 0; text-align: right;">
+                <div class="col-12 pe-md-5 pe-0 web-link" >
                   <p style="font-size: 30px;color: rgb(255, 108, 4); font-weight: 800;">www.relinksys.com</p>
                 </div>
             </div>
