--- a/garment/web/src/app/sale/bill/bill.component.html
+++ b/garment/web/src/app/sale/bill/bill.component.html
@@ -621,10 +621,10 @@
                                             <mat-icon class="deletes_icon " title="Delete">delete_forever</mat-icon>
                                         </button>
 
-                                        <button *ngIf="data.ID != null" class="bgRemove p-0 ms-1"  type="button"
+                                        <!-- <button *ngIf="data.ID != null" class="bgRemove p-0 ms-1"  type="button"
                                             (click)="OrderPrint(data)">
                                             <mat-icon class="pritn_icon  " title="Order Form">print</mat-icon>
-                                        </button>
+                                        </button> -->
 
                                         <!-- <mat-icon *ngIf="data.Status !== 0" class="edit_icon ms-1"  type="button"
                                             (click)="openModal(content,data)">remove_red_eye</mat-icon> -->
